<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutVerticalStyle"
    android:layout_width="match_parent"
    android:layout_gravity="right" >

    <LinearLayout
        style="@style/LayoutVerticalStyle"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_error_messages"
            style="@style/ErrorLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

        <TextView
            style="@style/SettingLabelStyle"
            android:layout_margin="10dp"
            android:layout_marginLeft="0dp"
            android:text="@string/form_filed__id" />

        <TextView
            style="@style/SettingLabelStyle"
            android:layout_marginBottom="10dp"
            android:text="@string/form_field__id_annotation" />

        <EditText
            android:id="@+id/edit_login_id"
            style="@style/HomeTextDescriptionStyle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/edit_text_border_style"
            android:paddingLeft="5dp" />

        <TextView
            style="@style/SettingLabelStyle"
            android:layout_margin="10dp"
            android:text="@string/form_filed__password" />

        <EditText
            android:id="@+id/edit_password"
            style="@style/HomeTextDescriptionStyle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/edit_text_border_style"
            android:inputType="textPassword"
            android:paddingLeft="5dp" />

    </LinearLayout>

    <TextView
        style="@style/SettingLabelStyle"
        android:text="@string/form_field__email" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/HomeTextDescriptionStyle"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_weight="1"
        android:background="@drawable/edit_text_border_style"
        android:ems="10"
        android:paddingLeft="5dp" >

        <requestFocus />
    </EditText>

    <LinearLayout
        style="@style/LayoutVerticalStyle"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/button_signup"
            style="@style/ButtonStyle"            
            android:background="@drawable/my_button"
            android:text="@string/signup__signup_button" />
    </LinearLayout>

</LinearLayout>