<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutVerticalStyle"
    android:layout_gravity="end" >

    <LinearLayout
        style="@style/LayoutVerticalStyle"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/text_error_messages"
            style="@style/ErrorLabelStyle"
            android:layout_marginBottom="10dp"
            android:text="@string/message_error__wrong_input"
            android:visibility="gone" />

        <TextView
            style="@style/SettingLabelStyle"
            android:text="@string/form_filed__id"
            android:textSize="8pt" />

        <TextView
            android:id="@+id/edit_login_id"
            style="@style/SettingLabelStyle"
            android:layout_width="270dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:textSize="15sp" />

        <TextView
            style="@style/SettingLabelStyle"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/form_field__email"
            android:textSize="8pt" />

        <EditText
            android:id="@+id/edit_email"
            style="@style/HomeTextDescriptionStyle"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="start|center_horizontal"
            android:background="@drawable/edit_text_border_style"
            android:paddingLeft="5dp" />

    </LinearLayout>

    <TextView
        style="@style/SettingLabelStyle"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/form_filed__password"
        android:textSize="8pt" />

    <EditText
        android:id="@+id/text_password"
        style="@style/HomeTextDescriptionStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="@drawable/edit_text_border_style"
        android:ems="10"
        android:inputType="textPassword"
        android:maxLength="20"
        android:paddingLeft="5dp"
        android:password="true" />

    <Button
        android:id="@+id/button_save"
        style="@style/ButtonStyle"
        android:layout_marginTop="10dp"
        android:background="@drawable/red_button"
        android:text="@string/account_setting__ok_button" />

    <LinearLayout
        style="@style/LayoutVerticalStyle"
        android:gravity="center_horizontal" >
    </LinearLayout>

</LinearLayout>