<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/LayoutVerticalStyle"
              android:layout_gravity="end" >

  <LinearLayout
      style="@style/LayoutVerticalStyle"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp" >

    <TextView
        android:id="@+id/text_error_messages"
        android:text="@string/message_error__wrong_input"
        style="@style/ErrorLabelStyle"
        android:layout_marginTop="10dp"
        android:visibility="gone" />

    <TextView
        android:text="@string/form_filed__id"
        style="@style/SettingLabelStyle"
        android:textSize="8pt" />

    <EditText
        android:id="@+id/edit_login_id"
        android:inputType="textNoSuggestions"
        android:maxLength="20"
        style="@style/HomeTextDescriptionStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="start|center_horizontal"
        android:background="@drawable/edit_text_border_style"
        android:paddingLeft="5dp" />

    <TextView
        android:text="@string/form_filed__password"
        style="@style/SettingLabelStyle"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="8pt" />

    <EditText
        android:id="@+id/edit_password"
        android:inputType="textPassword"
        android:maxLength="20"
        style="@style/HomeTextDescriptionStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="start|center_horizontal"
        android:background="@drawable/edit_text_border_style"
        android:paddingLeft="5dp" />

  </LinearLayout>

  <Button
      android:id="@+id/button_login"
      android:text="@string/login__login_button"
      style="@style/ButtonStyle"
      android:layout_marginTop="10dp"
      android:background="@drawable/my_button" />

  <LinearLayout
      style="@style/LayoutVerticalStyle"
      android:gravity="center_horizontal" >
  </LinearLayout>

</LinearLayout>