<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <TextView
            android:id="@+id/text_datetime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <EditText
            android:id="@+id/edit_task_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:layout_weight="1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/blackborder"
            android:ems="10"
            android:singleLine="true"
            android:hint="@string/add_task__title_placeholder"
            android:paddingLeft="5dp"
            android:layout_marginRight="5dp"
            android:nextFocusDown="@+id/edit_memo">
            <requestFocus />
        </EditText>
        <Button
            android:id="@+id/button_datetime"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:background="@drawable/ic_action_time" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_memo"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:minHeight="40dp"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/blackborder"
        android:ems="10"
        android:gravity="top"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:hint="@string/add_task__memo_placeholder"
        android:nextFocusDown="@+id/edit_task_title" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#D3D3D3"
            android:text="@string/add_task__cancel_button" />
        <Space android:layout_width="10dp"
               android:layout_height="match_parent" />
        <Button
            android:id="@+id/button_save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#EE3B3B"
            android:textColor="#ffffff"
            android:text="@string/add_task__save_button" />
    </LinearLayout>

</LinearLayout>